<resources>
    <string name="app_name">ATX88 Demo</string>
    <string name="app_regist_device_name">Regist Device</string>
    <string name="discover_device_name">Discovering Device</string>
    <string name="menu_connect_new_device">Connect to new device</string>
    <string name="menu_connect_last_device">Connect to last device</string>
    <string name="menu_discoverable_bluetooth">Make discoverable</string>
    <string name="menu_disconnect_device">Disconnect device</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_delete">Delete</string>
    <string name="app_version">App Version</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="device_name">Device Name</string>
    <string name="device_address">Device Address</string>
    <string name="action_new_device">New Device</string>
    <string name="action_scan_device">Scan Device</string>
    <string name="action_start">Start</string>
    <string name="action_read">Read</string>
    <string name="action_write">Write</string>
    <string name="action_lock">Lock</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_permalock">Perma</string>
    <string name="action_stop">Stop</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_back">Back</string>
    <string name="action_on">On</string>
    <string name="action_off">Off</string>
    <string name="action_clear">Clear</string>
    <string name="action_mask">Mask</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_default">Default</string>
    <string name="action_set_password">Set Password</string>
    <string name="action_setting">Setting</string>
    <string name="tab_bluetooth">Bluetooth</string>
    <string name="tab_wlan">WLAN</string>
    <string name="paired_device">Paired Devices</string>
    <string name="registed_device">Registed Devices</string>
    <string name="new_device">New Devices</string>
    <string name="view_inventory">Inventory</string>
    <string name="view_stored_data">Stored Data</string>
    <string name="view_read_memory">Read Memory</string>
    <string name="view_write_memory">Write Memory</string>
    <string name="view_lock_memory">Lock Memory</string>
    <string name="view_rfid_option">RFID Option</string>
    <string name="title_error">Error</string>
    <string name="title_system_error">System Error</string>
    <string name="title_bt_error">Bluetooth Error</string>
    <string name="title_log_level">Log Level</string>
    <string name="title_system">System</string>
    <string name="title_bt">Bluetooth</string>
    <string name="title_wifi">WIFI</string>
    <string name="title_rfid_option">RFID Options</string>
    <string name="title_barcode_option">Barcode Options</string>
    <string name="title_select_mask_6c">Select Mask 6c</string>
    <string name="title_select_mask_6c_item">Select Mask Item</string>
    <string name="title_symbol_state">Symbologies State</string>
    <string name="title_select_mask">Select Mask</string>
    <string name="title_write_tag">Write to tag</string>
    <string name="msg_not_support_bt">This device does not support Bluetooth. Please check again.</string>
    <string name="msg_not_support_wifi">This device does not support WIFI. Please check again.</string>
    <string name="msg_not_support_bt_or_wifi">The App can be executed to support one of Bluetooth or WIFI. Please check again.</string>
    <string name="msg_not_connect_wifi">WIFI is not connected to the Access Point. Please check again.</string>
    <string name="msg_turn_on_wifi">WIFI is off. Would you like to turn on WIFI?</string>
    <string name="msg_initialize_view">Initializing. Please wait.</string>
    <string name="msg_success">Success</string>
    <string name="msg_read_memory">Reading tag data. Please wait.</string>
    <string name="msg_fail_read_tag">Could not read tag.</string>
    <string name="msg_write_memory">Writing data to the tag. Please wait.</string>
    <string name="msg_fail_write_tag">Could not write tag.</string>
    <string name="msg_lock_memory">Locking the tag. Please wait.</string>
    <string name="msg_fail_lock_tag">Could not lock tag.</string>
    <string name="msg_unlock_memory">Unlocking the tag. Please wait.</string>
    <string name="msg_fail_unlock_tag">Could not unlock tag.</string>
    <string name="msg_permalock_memory">Permalocking the tag. Please wait.</string>
    <string name="msg_fail_permalock_tag">Could not permalock tag.</string>
    <string name="msg_set_password">Setting password to tag. Please wait.</string>
    <string name="msg_fail_set_password">Could not set password to tag.</string>
    <string name="msg_loading_select_mask">Loading select mask. Please wait.</string>
    <string name="msg_saving_select_mask">Saving select mask. Please wait.</string>
    <string name="msg_load_stored_data">Loading Stored Data. Please wait.</string>
    <string name="msg_remove_stored_data">Remove All Stored Data. Please wait.</string>
    <string name="msg_fail_stop_action">Failed to stop action</string>
    <string name="msg_fail_start_inventory">Failed to start inventoried</string>
    <string name="msg_fail_start_decode">Failed to start decode</string>
    <string name="msg_fail_start_read_memory">Failed to start read memory</string>
    <string name="msg_fail_start_write_memory">Failed to start write memory</string>
    <string name="msg_fail_start_lock">Failed to start lock memory</string>
    <string name="msg_fail_start_unlock">Failed to start unlock memory</string>
    <string name="msg_fail_start_permalock">Failed to start permalock memory</string>
    <string name="msg_fail_start_set_password">Failed to start set password</string>
    <string name="msg_set_select_mask">Do you want to set the selected data as a mask?</string>
    <string name="msg_write_tag">Do you want to write the selected barcode data to the RFID tag?</string>
    <string name="msg_question_disable_select_mask">Are you sure you want to disable the Selection Mask?</string>
    <string name="msg_disable_select_mask">Selection Mask is disabled.</string>
    <string name="msg_fail_disable_select_mask">Failed to disable Selection Mask.</string>
    <string name="msg_fail_load_reader_instance">Failed to get Reader Instance.</string>
    <string name="msg_fail_load_rfid_reader_instance">Failed to get Rfid Reader Instance.</string>
    <string name="msg_fail_load_disabled_action_key">Failed to disabled action key.</string>
    <string name="msg_fail_load_rfid_global_band">Failed to load global band.</string>
    <string name="msg_fail_save_rfid_global_band">Failed to save global band.</string>
    <string name="msg_fail_load_rfid_power_gain">Failed to load power gain.</string>
    <string name="msg_fail_save_rfid_power_gain">Failed to save power gain.</string>
    <string name="msg_fail_load_rfid_inventory_time">Failed to load inventory time.</string>
    <string name="msg_fail_save_rfid_inventory_time">Failed to save inventory time.</string>
    <string name="msg_fail_load_rfid_idle_time">Failed to load idle time.</string>
    <string name="msg_fail_save_rfid_idle_time">Failed to save idle time.</string>
    <string name="msg_fail_load_rfid_operation_time">Failed to load operation time.</string>
    <string name="msg_fail_save_rfid_operation_time">Failed to save operation time.</string>
    <string name="msg_fail_load_rfid_auto_save_mode">Failed to load auto save mode.</string>
    <string name="msg_fail_save_rfid_auto_save_mode">Failed to save auto save mode.</string>
    <string name="msg_fail_load_rfid_report_rssi">Failed to load report rssi.</string>
    <string name="msg_fail_save_rfid_report_rssi">Failed to save report rssi.</string>
    <string name="msg_fail_load_rfid_current_link_profile">Failed to load current link profile.</string>
    <string name="msg_fail_save_rfid_current_link_profile">Failed to save current link profile.</string>
    <string name="msg_fail_load_rfid_default_link_profile">Failed to load default link profile.</string>
    <string name="msg_fail_save_rfid_default_link_profile">Failed to save default link profile.</string>
    <string name="msg_fail_load_rfid_select_mask">Failed to load select mask.</string>
    <string name="msg_fail_save_rfid_select_mask">Failed to save select mask.</string>
    <string name="msg_fail_load_rfid_select_flag">Failed to load select flag.</string>
    <string name="msg_fail_save_rfid_select_flag">Failed to save select flag.</string>
    <string name="msg_fail_load_rfid_session_target">Failed to load session target.</string>
    <string name="msg_fail_save_rfid_session_target">Failed to save session target.</string>
    <string name="msg_fail_load_rfid_session_flag">Failed to load session flag.</string>
    <string name="msg_fail_save_rfid_session_flag">Failed to save session flag.</string>
    <string name="msg_fail_load_rfid_algorithm">Failed to load algorithm.</string>
    <string name="msg_fail_save_rfid_algorithm">Failed to save algorithm.</string>
    <string name="msg_fail_load_rfid_start_q">Failed to load start Q.</string>
    <string name="msg_fail_save_rfid_start_q">Failed to save start Q.</string>
    <string name="msg_fail_load_rfid_min_q">Failed to load min Q.</string>
    <string name="msg_fail_save_rfid_min_q">Failed to save min Q.</string>
    <string name="msg_fail_load_rfid_max_q">Failed to load max Q.</string>
    <string name="msg_fail_save_rfid_max_q">Failed to save max Q.</string>
    <string name="msg_fail_load_rfid_frequency_table">Failed to load frequency table.</string>
    <string name="msg_fail_save_rfid_frequency_table">Failed to save frequency table.</string>
    <string name="msg_save_post_code">Barcode Post Code is being saved. Please wait a moment.</string>
    <string name="msg_fail_save_post_code">Failed to save Barcode Post Code.</string>
    <string name="msg_save_symbol">Symbol is being saved. Please wait a moment.</string>
    <string name="msg_fail_load_barcode_reader_instance">Failed to get Barcode Reader Instance.</string>
    <string name="msg_fail_load_symbol">Failed to load Barcode Symbol.</string>
    <string name="msg_fail_save_symbol">Failed to save Barcode Symbol.</string>
    <string name="msg_save_barcode_option">Barcode Option is being saved. Please wait a moment.</string>
    <string name="msg_fail_load_barcode_option">Failed to load Barcode Option.</string>
    <string name="msg_fail_save_barcode_option">Failed to save Barcode Option.</string>
    <string name="msg_enable_all_symbol">Enable all symbols. Please wait a moment.</string>
    <string name="power_gain">Power Gain</string>
    <string name="report_rssi">Report RSSI</string>
    <string name="operation_time">Operation Time</string>
    <string name="write_memory_param">Write Memory Parameter</string>
    <string name="lock_memory_param">Lock Memory Parameter</string>
    <string name="bank">Bank</string>
    <string name="offset">Offset</string>
    <string name="password">Password</string>
    <string name="write_data">Write Data</string>
    <string name="access_password">Access Password</string>
    <string name="kill_password">Kill Password</string>
    <string name="epc">EPC</string>
    <string name="tid">TID</string>
    <string name="user">User</string>
    <string name="rssi">RSSI</string>
    <string name="phase">Phase</string>
    <string name="algorithm">Algorithm</string>
    <string name="start_q">Start Q</string>
    <string name="min_q">Min Q</string>
    <string name="max_q">Max Q</string>
</resources>