<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.atid.app.atx.activity.view.ViewWriteMemory" >
    
	<!-- Mask -->
	<TextView android:id="@+id/epc_value"
	    style="@style/epc_value_textview" />
    
    <View style="@style/vertical_split_5dp" />
	
	<!-- Message -->
	<LinearLayout android:id="@+id/msg_background"
	    style="@style/message_layout" >
	    
	    <ProgressBar android:id="@+id/progress_bar"
	        android:visibility="gone"
	        style="@style/message_progress" />
	    
	    <TextView android:id="@+id/message"
	        style="@style/message_textview" />
	    
	</LinearLayout>

	<View style="@style/vertical_split_5dp" />

	<!-- Param Display -->
	<LinearLayout android:id="@+id/param_display"
	    android:visibility="gone"
	    style="@style/vertical_layout" >
		
	    <LinearLayout
	        style="@style/horizontal_layout" >
			
			<TextView
			    style="@style/option_caption_textview"
			    android:layout_weight="1"
			    android:text="@string/rssi" />
			
			<TextView
			    android:id="@+id/rssi"
			    style="@style/value_textview"
			    android:layout_weight="1.5"
			    tools:ignore="InefficientWeight" />
			
			<View style="@style/horizontal_split_5dp" />
					
			<TextView
			    style="@style/option_caption_textview"
			    android:layout_weight="1"
			    android:text="@string/phase" />
			
			<TextView
			    android:id="@+id/phase"
			    style="@style/value_textview"
			    android:layout_weight="1.5"
			    tools:ignore="InefficientWeight" />
	        	        
	    </LinearLayout>		

		<View style="@style/vertical_split_5dp" />
	    					    	    
	</LinearLayout>
		
	<!-- Write Parameter -->
	<TextView
	    style="@style/label_textview"
	    android:text="@string/write_memory_param" />
	<ScrollView
	    style="@style/param_scrollview" >

	    <LinearLayout
	        style="@style/param_layout" >
	        
	        <!-- Bank -->
            <LinearLayout style="@style/line_layout"
                tools:ignore="UselessParent" >
				
                <TextView style="@style/option_caption_textview"
                    android:text="@string/bank" />
                
                <View style="@style/horizontal_split_5dp" />
                
                <TextView
                    android:id="@+id/bank"
                    style="@style/option_value_textview"
                    android:layout_weight="1.5"
                    tools:ignore="InefficientWeight" />
                
            </LinearLayout>
	        
            <View style="@style/list_split" />
            
	        <!-- Offset -->
            <LinearLayout style="@style/line_layout"
                tools:ignore="UselessParent" >
				
                <TextView style="@style/option_caption_textview"
                    android:text="@string/offset" />
                
                <View style="@style/horizontal_split_5dp" />
                
                <TextView
                    android:id="@+id/offset"
                    style="@style/option_value_textview"
                    android:layout_weight="1.5"
                    tools:ignore="InefficientWeight" />
                
            </LinearLayout>
	        
            <View style="@style/list_split" />
            	        
	        <!-- Write Data -->
            <LinearLayout style="@style/line_vertical_layout"
                tools:ignore="UselessParent" >
				
                <TextView style="@style/option_caption_vertical_textview"
                    android:text="@string/write_data" />
                
                <View style="@style/horizontal_split_5dp" />
                
                <TextView
                    android:id="@+id/write_data"
                    style="@style/option_value_vertical_textview"
                    tools:ignore="InefficientWeight" />
                
            </LinearLayout>
	        
            <View style="@style/list_split" />
            	        
	        <!-- Access Password -->
            <LinearLayout style="@style/line_layout"
                tools:ignore="UselessParent" >
				
                <TextView style="@style/option_caption_textview"
                    android:text="@string/password" />
                
                <View style="@style/horizontal_split_5dp" />
                
                <TextView
                    android:id="@+id/password"
                    style="@style/option_value_textview"
                    android:layout_weight="1.5"
                    tools:ignore="InefficientWeight" />
                
            </LinearLayout>
	        
            <View style="@style/list_split" />
            	        
	        <!-- Power Gain -->
            <LinearLayout style="@style/line_layout"
                tools:ignore="UselessParent" >
				
                <TextView style="@style/option_caption_textview"
                    android:text="@string/power_gain" />
                
                <View style="@style/horizontal_split_5dp" />
                
                <TextView
                    android:id="@+id/power_gain"
                    style="@style/option_value_textview"
                    android:layout_weight="1.5"
                    tools:ignore="InefficientWeight" />
                
            </LinearLayout>
	        
            <View style="@style/list_split" />
            	        
	        <!-- Operation Time -->
            <LinearLayout style="@style/line_layout"
                tools:ignore="UselessParent" >
				
                <TextView style="@style/option_caption_textview"
                    android:text="@string/operation_time" />
                
                <View style="@style/horizontal_split_5dp" />
                
                <TextView
                    android:id="@+id/operation_time"
                    style="@style/option_value_textview"
                    android:layout_weight="1.5"
                    tools:ignore="InefficientWeight" />
                
            </LinearLayout>
	        
            <View style="@style/list_split" />
            	        
	        <!-- Report Rssi -->
            <LinearLayout style="@style/line_layout"
                tools:ignore="UselessParent" >
				
                <TextView style="@style/option_caption_textview"
                    android:text="@string/report_rssi" />
                
                <View style="@style/horizontal_split_5dp" />
                
                <Switch android:id="@+id/report_rssi"
                    style="@style/value_switch" />
                
            </LinearLayout>
	        	        
	    </LinearLayout>
	    	    
	</ScrollView>

	<View style="@style/vertical_split_5dp" />
	
	<!-- Buttons -->
	<LinearLayout
	    style="@style/vertical_layout" >
	    
        
        <Button android:id="@+id/action"
            style="@style/action_parent_size_button"
            android:text="@string/action_write" />
        
        <LinearLayout style="@style/horizontal_layout" >
        
            <Button
                android:id="@+id/clear"
            	style="@style/action_full_size_button"
                android:text="@string/action_clear" />
        
            <Button
                android:id="@+id/mask"
            	style="@style/action_full_size_button"
                android:text="@string/action_mask" />
            
        </LinearLayout>
	    
	</LinearLayout>
	
</LinearLayout>
