<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.atid.app.atx.activity.view.ViewAccessMemory" >
    

    <RadioGroup android:id="@+id/method_type_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/frame_round_rectangle"
        android:padding="8dp">
    
        <RadioButton android:id="@+id/method_read_memory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
	        android:text="@string/action_read"
	        android:button="@drawable/rdb_access_read_memory_selector"/>

        <RadioButton android:id="@+id/method_write_memory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
	        android:text="@string/action_write"
	        android:button="@drawable/rdb_access_write_memory_selector"/>

        <RadioButton android:id="@+id/method_lock_memory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
	        android:text="@string/action_lock"
	        android:button="@drawable/rdb_access_lock_memory_selector"/>
        
    </RadioGroup>
    
    <View style="@style/vertical_split_5dp"/>
    	
    <FrameLayout android:id="@+id/container_access_memory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
	    android:layout_weight="1">

    </FrameLayout>
    
	<View style="@style/vertical_split_5dp"/>
	
	<LinearLayout 
	    style="@style/horizontal_layout"
	    tools:ignore="DisableBaselineAlignment">
	    
	    <!-- Buttons -->
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
			android:layout_weight="2"
			android:orientation="vertical"
			tools:ignore="UselessParent">

	        <Button android:id="@+id/action"
	            style="@style/action_parent_size_button"
	            android:text="@string/action_start"/>	        
	            
	        <LinearLayout style="@style/horizontal_layout">
	            
	            <Button android:id="@+id/setting"
	                style="@style/action_full_size_button"
	                android:text="@string/action_setting"/>
	            
	            <Button android:id="@+id/clear"
	                style="@style/action_full_size_button"
	                android:text="@string/action_clear"/>
	            
	        </LinearLayout>
	        
	    </LinearLayout>
	    
	</LinearLayout>    
    
</LinearLayout>
