<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/option_caption_textview"
            android:text="@string/algorithm" />

        <TextView
            android:id="@+id/algorithm"
            style="@style/option_value_textview"
            android:layout_weight="2"
            tools:ignore="InefficientWeight" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            style="@style/option_caption_textview"
            android:text="@string/start_q" />

        <TextView
            android:id="@+id/start_q"
            style="@style/option_value_textview"
            android:layout_weight="1"
            tools:ignore="InefficientWeight" />

        <View style="@style/horizontal_split_7dp" />
        
        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="2" />
        
    </LinearLayout>
    
    <LinearLayout android:id="@+id/linear_min_max_q"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/option_caption_textview"
            android:text="@string/min_q" />

        <TextView
            android:id="@+id/min_q"
            style="@style/option_value_textview"
            android:layout_weight="1"
            tools:ignore="InefficientWeight" />

        <View style="@style/horizontal_split_7dp" />

        <TextView
            style="@style/option_caption_textview"
            android:text="@string/max_q" />

        <TextView
            android:id="@+id/max_q"
            style="@style/option_value_textview"
            android:layout_weight="1"
            tools:ignore="InefficientWeight" />

    </LinearLayout>

</LinearLayout>